muter (0.6.0-1) UNRELEASED; urgency=medium

  * Implement several deflate-based codecs: deflate, gzip, and zlib.
  * Add support for blake3 in the hash codec when built with the feature
    "modern" and a suitably new version of Rust.
  * Add support for two non-cryptographic checksums (adler32 and fletcher16) in
    the codec "checksum".
  * Fix a panic on invalid data in the vis decoder.
  * Increase the buffer size to 64 KiB.

 -- brian m. carlson <sandals@crustytoothpaste.net>  Tue, 15 Jun 2021 00:00:00 -0000

muter (0.5.0-1) UNRELEASED; urgency=medium

  * Initial Debian package release.
  * Bump minimum Rust version to 1.34.2.
  * Implement the Yubico modhex encoding as the encoder "modhex".
  * Add the option "bare" to the ascii85 encoder.
  * Implement the Bubble Babble binary data encoding as the encoder
    "bubblebabble".

 -- brian m. carlson <sandals@crustytoothpaste.net>  Wed, 23 Dec 2020 00:00:00 -0000