@@ -5,6 +5,7 @@ muter (0.6.0-1) UNRELEASED; urgency=medium
     "modern" and a suitably new version of Rust.
   * Add support for two non-cryptographic checksums (adler32 and fletcher16) in
     the codec "checksum".
+  * Add support for a transform that swaps the endianness of bytes (swab).
   * Fix a panic on invalid data in the vis decoder.
   * Increase the buffer size to 64 KiB.
 
